# SPITE-D

./: .gitignore  CMakeLists.txt  package.xml
gazebo/models/turtlebot3_waffle/: model.config  model.sdf
gazebo/worlds/: actor_test.sdf  base_actor_test.sdf  depth_multi_cross.sdf  depth_single_cross.sdf  world1.sdf
include/planning/: planning.hpp
include/spite_d/common/: types.hpp
include/spite_d/dynamic_map/: span.hpp  span_pipeline.hpp
include/spite_d/perception/: box_tracker.hpp  tracker.hpp  uv_detector.hpp
include/spite_d/planner/: replanner.hpp  roadmap_io.hpp
include/spite_d/spite/: validity_server.hpp
include/spite_d/trajectory/: predictor.hpp
launch/: pipeline.launch.py  scenario.launch.py  spited.launch.py
msg/: ObstacleArray.msg  ObstacleState.msg  PredictedTrajectory.msg  PredictedTrajectoryArray.msg
src/dynamic_map/: span.cpp  span_pipeline.cpp
src/nodes/: perception_node.cpp  prediction_node.cpp  validity_node.cpp
src/perception/: box_tracker.cpp  pose_preprocessing.cpp  rgbd_preprocessing.cpp  uv_detector.cpp
src/planner/: replanner.cpp  roadmap_io.cpp
src/planning/: dynamic_roadmap.cpp  low_level_collision_check.cpp  replanning.cpp
src/spite/: aabb.cpp  high_level_collision_check.cpp  oobb.cpp  over_approx.cpp  ser_rgg.cpp  under_approx.cpp  validity_server.cpp
src/trajectory/: constant_velocity_predictor.cpp
tests/: CMakeLists.txt  test_perception.cpp  test_predictor.cpp  test_replanner.cpp  test_roadmap_roundtrip.cpp  test_span.cpp  test_span_pipeline.cpp  test_validity_server.cpp
tools/: bag_harness.py  build_roadmap.cpp  build_roadmap_ur5.cpp  demo_dynamic.cpp
