<?xml version="1.0"?>
<package format="3">
  <name>spite_d</name>
  <version>0.1.0</version>
  <description>Perception-driven SPITE: dynamic obstacle validity checking</description>
  <maintainer email="you@gatech.edu">Sai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>